# overworld

./: .env.example  .gitignore  .mise.toml  .plane.env  .pre-commit-config.yaml  EXPORT_QUICK_START.md  R2_SETUP.md  README.md  STORY-001-VALIDATION.md  STORY-015-IMPLEMENTATION.md  compose.yml  docker-compose.yml  sprints-1-4-demo-guide.md  update-r2-credentials.sh
backend/: .env.stripe.example  CONSENSUS_DEMO_CHECKLIST.md  CONSENSUS_DEMO_README.md  CONSENSUS_DEMO_RUNLIST.md  Dockerfile  STORY_014_SUMMARY.md  STRIPE_INTEGRATION.md  WORKER.md  alembic.ini  pyproject.toml  requirements.txt  run_consensus_demo.sh  run_worker.py
backend/alembic/: env.py
backend/alembic/versions/: 20260109_1050_91c47a448481_add_gin_index_for_maps_hierarchy_jsonb.py  20260109_1050_cf9a1d378cb5_initial_schema_with_all_tables_and_.py  20260109_1123_75b5025fadd6_add_documents_table.py  20260109_1132_0c9ce5097329_fix_documents_user_id_type.py  20260113_1925_7a66a7d54df2_add_document_processing_fields_and_.py  20260120_create_exports_table.py  (+3 more)
backend/app/: __init__.py  main.py
backend/docs/: EXPORT_FEATURE.md
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_coordinator.py  test_database.py  test_document_upload.py  test_export.py  test_file_validation.py  test_generation.py  test_hierarchy_extraction.py  test_icon_agent.py  test_job_queue.py  test_legacy_agents.py  test_oauth.py  test_pipeline_foundation.py  test_queue.py  test_road_agent.py  test_splines.py  test_stripe.py  test_stripe_subscription.py  test_themes.py  test_token_service.py  test_users.py  test_websocket.py
(+206 files in other folders)
